# wgpu-spielerei

./: Cargo.toml  README.md
src/: commandbuffer.rs  graphics.rs  lib.rs  main.rs  not_menger.wgsl  resource.rs  shader.wgsl  space_menger.wgsl
src/graphics/: resource.rs
