[package]
name = "wgpu-spielerei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14"
env_logger = "0.9"
pollster = "0.3"
winit = "0.27"
bytemuck = { version = "1.12", features = ["derive"] }
rodio = "*"
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]